# tcs_agentic_research

./: .gitignore  ARCHITECTURE.md  README.md  config.example.yml  config.independent-reasoner-verifier.yml  docker-compose.vllm.yml  pyproject.toml
examples/: structured_sat_task.md
scripts/: launch_vllm_independent_reasoner_verifier.sh  launch_vllm_stack.sh
src/experimenter/: Dockerfile
src/tcs_agentic_research/: __init__.py  artifact_store.py  cli.py  engine.py  graph.py  llm.py  obligations.py  prompt_loader.py  prompt_serialization.py  render.py  schemas.py  tooling.py  workflow.py
src/tcs_agentic_research/agents/: __init__.py  critics.py  experiment.py  initialization.py  literature.py  obstruction.py  proposal.py  replication.py  research.py  resource_accounting.py  theorem_prover.py  toolsets.py
src/tcs_agentic_research/core/: __init__.py  context.py  kernel.py  models.py  policy.py  report.py  subsystem.py
src/tcs_agentic_research/experimenter/: Dockerfile  __init__.py  docker_project.py  errors.py  runner.py  study_harness.py  validation.py
src/tcs_agentic_research/leap/: README.md  __init__.py  agents.py  controller.py  dag.py  graph.py  harness.py  internal_agents.py  lean.py  models.py  render.py  retrieval.py  search.py  sorry.py  state.py
src/tcs_agentic_research/literature/: __init__.py  audit.py  fetchers.py  index.py  nomenclature.py  openalex.py  pdf_text.py  retrieval.py
src/tcs_agentic_research/pipelines/: __init__.py  derivation.py  experiment.py  experiment_compat.py  literature.py  proof.py
src/tcs_agentic_research/prompts/: experiment_planner.md  independent_replication.md  initialization_interviewer.md  initialization_synthesizer.md  leap_blueprint.md  leap_decomposition_reviewer.md  leap_direct_prover.md  leap_informal_prover.md  leap_reviser.md  leap_sketch.md  leap_sketch_reviser.md  literature_researcher.md  (+7 more)
tests/: test_builtin_proof.py  test_core_kernel.py  test_evidence_policy.py  test_experiment_contract.py  test_experiment_v3.py  test_leap_core.py  test_literature_service.py  test_schema_prompt.py  test_smoke_invariants.py  test_workspace_scenarios.py
workspaces/test-exp-dpll-sat-benchmark/: InitialResearchTask.md
workspaces/test-integration-toy-algorithm-full-pipeline/: InitialResearchTask.md
workspaces/test-leap-boolean-algebra-lemmas/: InitialResearchTask.md
workspaces/test-lit-orthogonal-vectors-lower-bounds/: InitialResearchTask.md  ObligationBoard.json
(+5 files in other folders)
