[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agentic-tcs-research-system"
version = "0.2.0"
description = "Bounded, artifact-driven research workflow for theoretical computer science."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agentic Research" }]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11"]
lean = []

[project.scripts]
tcs-research = "tcs_agentic_research.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tcs_agentic_research"]

[tool.hatch.build.targets.wheel.force-include]
"src/tcs_agentic_research/prompts" = "tcs_agentic_research/prompts"
"src/tcs_agentic_research/experimenter/Dockerfile" = "tcs_agentic_research/experimenter/Dockerfile"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
